Review Request 16417: PLS-10643 Fix issue of TP attributes overlapping with search box

--- a/le-ui/projects/atlas/app/cgtalkingpoint/cgtalkingpoint.scss
+++ b/le-ui/projects/atlas/app/cgtalkingpoint/cgtalkingpoint.scss
@@ -264,7 +264,7 @@
         select {
             margin-bottom: 5px;
             text-transform: capitalize;
-            padding: 8px;
+            height: 20px;
         }
     }
 
